testsuite/tests/properties/invalid_abstract/list_abstract_in_root.lkt
# Check that abstract properties in the root node are rejected when at least
# one list types does not override it.

from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(Example("example"))
}

class FooNode implements Node[FooNode] {
    @exported @abstract fun prop(): Bool
}

@abstract class BaseNode: FooNode {
    fun prop(): Bool = true
}

class Example: BaseNode {
}
